--- a/thank.html
+++ b/thank.html
@@ -47,7 +47,9 @@
                 <div class="col-12">
                     <div class="custom-card-bg">
                         <p>thanks for your response our admission team <br>will get back to you shortly !!!</p>
-                        <button type="button" class="btn btn-outline-info" style="color: white;">Back To Home</button>
+                        <a href="index.html">
+                            <button type="button" class="btn btn-outline-info" style="color: white;">Back To Home</button>
+                        </a>
                     </div>
                 </div>
             </div>
