--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="row pt-5">
                 <div class="col-sm-8 col-12 custom-banner-text">
                     <div class="banner__text">
-                        <h1 class="custom-title text-capitalize" style="color: #fff;">Predicting the Future isn’t Magic, it’s Artificial Intelligence.</h1>
+                        <h1 class="custom-title text-capitalize" style="color: #fff;"> Fashion is more art than art is </h1>
                     </div>
                 </div>
                 <div class="col-sm-4 col-12 mb-3">
@@ -111,7 +111,7 @@
     <!-- description -->
     <div class="custom-bg">
         <div class="container pt-5 pb-5">
-            <h1 class="text-center custom-title p-5" style="color: white;">B.Tech Artificial Intelligence & Data Science</h1>
+            <h1 class="text-center custom-title p-5" style="color: white;">B.Sc Costume Design and Fashion</h1>
              <div class="row">
                 <div class="col-md-8 col-12">
                     <div class="row">
@@ -151,8 +151,8 @@
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/gwyBvXSUhw4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-md-6 col-12 p-5">
-                    <h2 class="pt-1 pb-3 custom-title text-uppercase">Technology Redefined </h2>
-                    <p>Artificial intelligence will take you to the forefront of the future enabling your expertise in machine learning to robotics and data handling. Boosting your technical skills by understanding the world of AI and how it applies to your job role or the career of your dreams, is one of the many reasons to upskill in this field. 
+                    <h2 class="pt-1 pb-3 custom-title text-uppercase">Fashion Flare</h2>
+                    <p>A Bachelor’s degree in Fashion designing is a gateway into the glamourous fashion industry. It helps individuals to learn about the latest trends in fashion and the demands of society. It instills artistic skill, imagination and innovation. Fashion is a prospering career with wide opportunities like fashion bloggers, store managers, editors, designing and manufacturing. 
                     </p>
                 </div>                 
              </div>
@@ -196,72 +196,53 @@
             <div class="row">
                 <div class="col-12">
                     <h2 class="pt-3 pb-2 custom-title text-uppercase text-center">CAREER ASPECTS</h2>
-                    <h5 class="text-center pb-5"><span><img class="" style="margin-top: -2%;" src="https://img.icons8.com/material-outlined/20/000000/quote-left.png"/></span> Exceptional jobs in prospective fields and challenging roles in futuristic industries.<span><img class="" style="margin-top: -2%;" src="https://img.icons8.com/material-outlined/20/000000/quote-right.png"/></span></h5>
+                    <h5 class="text-center pb-5"><span><img class="" style="margin-top: -2%;" src="https://img.icons8.com/material-outlined/20/000000/quote-left.png"/></span> 
+                        Fashion is a lucrative industry that offers best career opportunities.<span><img class="" style="margin-top: -2%;" src="https://img.icons8.com/material-outlined/20/000000/quote-right.png"/></span></h5>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <div class=" custom-course-card">
                         <div class="custom-circle-bg">
                             <img class="custom-circle" src="https://img.icons8.com/external-vitaliy-gorbachev-lineal-vitaly-gorbachev/40/ffffff/external-coding-internet-technology-vitaliy-gorbachev-lineal-vitaly-gorbachev.png"/>
                         </div>
-                        <h4 class="pt-4">Artificial Intelligence Engineer</h4>
+                        <h4 class="pt-4">Fashion Consultant</h4>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <div class=" custom-course-card">
                         <div class="custom-circle-bg">
                             <img class="custom-circle" src="https://img.icons8.com/pastel-glyph/40/ffffff/domain.png"/>
                         </div>
-                        <h4 class="pt-4">Data Scientist</h4>
+                        <h4 class="pt-4">Fashion Journalist</h4>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <div class=" custom-course-card">
                         <div class="custom-circle-bg">
                             <img class="custom-circle" src="https://img.icons8.com/external-itim2101-lineal-itim2101/40/ffffff/external-mobile-app-taxi-service-itim2101-lineal-itim2101-3.png"/>
                         </div>
-                        <h4 class="pt-4">Data Analyst</h4>
+                        <h4 class="pt-4">Personal Shopper</h4>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-6">
                     <div class=" custom-course-card">
                         <div>
                             <div class="custom-circle-bg">
                                 <img class="custom-circle" src="https://img.icons8.com/external-yogi-aprelliyanto-detailed-outline-yogi-aprelliyanto/40/ffffff/external-ui-design-web-design-and-development-yogi-aprelliyanto-detailed-outline-yogi-aprelliyanto.png"/>
                             </div>
                         </div>
-                        <h4 class="pt-4">Product Analyst</h4>
+                        <h4 class="pt-4">Brand Manager</h4>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class=" custom-course-card">
                         <div>
                             <div class="custom-circle-bg">
                                 <img class="custom-circle" src="https://img.icons8.com/external-smashingstocks-mixed-smashing-stocks/40/ffffff/external-returning-visitor-digital-strategy-smashingstocks-mixed-smashing-stocks.png"/>
                             </div>
                         </div>
-                        <h4 class="pt-4">Machine Learning Engineer</h4>
+                        <h4 class="pt-4">Photoshoot stylist </h4>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class=" custom-course-card">
-                        <div>
-                            <div class="custom-circle-bg">
-                                <img class="custom-circle" src="https://img.icons8.com/ios/40/ffffff/hub.png"/>
-                            </div>
-                        </div>
-                        <h4 class="pt-4">Machine Learning Architect</h4>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class=" custom-course-card">
-                        <div>
-                            <div class="custom-circle-bg">
-                                <img class="custom-circle" src="https://img.icons8.com/external-glyph-geotatah/40/ffffff/external-administration-stock-market-glyph-glyph-geotatah.png"/>
-                            </div>
-                        </div>
-                        <h4 class="pt-4">Big Data Engineer/ Architect</h4>
-                    </div>
-                </div> 
             </div>        
         </div>
     </div>
